Fix auth bug
