# documents/references/api-docs.yaml
@@ -1,7 +1,6 @@
 openapi: 3.1.0
 info:
-  title: OpenAPI definition
-  version: v0
+  title: Project API
 servers:
 - url: http://localhost:8080
   description: Generated server url
@@ -50,6 +49,8 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ProjectResponse"
+      security:
+      - bearerAuth: []
     put:
       tags:
       - Project Management
@@ -89,6 +90,8 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ProjectResponse"
+      security:
+      - bearerAuth: []
     delete:
       tags:
       - Project Management
@@ -110,6 +113,8 @@ paths:
           description: Project not found
         "403":
           description: User does not have permission to delete this project
+      security:
+      - bearerAuth: []
   /appusers/password:
     put:
       tags:
@@ -142,6 +147,8 @@ paths:
             '*/*':
               schema:
                 type: string
+      security:
+      - bearerAuth: []
   /token:
     post:
       tags:
@@ -184,6 +191,8 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/ProjectResponse"
+      security:
+      - bearerAuth: []
     post:
       tags:
       - Project Management
@@ -201,6 +210,8 @@ paths:
           description: Project created successfully
         "400":
           description: Invalid project data
+      security:
+      - bearerAuth: []
   /projects/{id}/versions:
     post:
       tags:
@@ -229,6 +240,8 @@ paths:
           description: Original project not found
         "403":
           description: User does not have permission
+      security:
+      - bearerAuth: []
   /functional-components/projects/{projectId}:
     post:
       tags:
@@ -256,6 +269,8 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ProjectResponse"
+      security:
+      - bearerAuth: []
   /functional-components/{componentId}/projects/{projectId}:
     delete:
       tags:
@@ -283,6 +298,8 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ProjectResponse"
+      security:
+      - bearerAuth: []
   /appusers:
     delete:
       tags:
@@ -295,6 +312,8 @@ paths:
           description: Account deleted successfully
         "401":
           description: User not authenticated
+      security:
+      - bearerAuth: []
 components:
   schemas:
     FunctionalComponentRequest:
@@ -567,3 +586,8 @@ components:
           minLength: 0
       required:
       - newPassword
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
